phpmyadmin/phpmyadmin-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: phpmyadmin.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: phpmyadmin
#                port:
#                  number: 443
